[tool.poetry]
name = "my_krml_1396490711"
version = "0.1.13"
description = "uni package"
authors = ["zoe_barrett"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
